--- a/index.html
+++ b/index.html
@@ -30,22 +30,26 @@
   <link rel="preload" as="image" href="https://i.imgur.com/2sA2Q5m.jpg" />
 
   <style>
-    :root {
-      --primary-color: #ff69b4; /* Rosa Flamingo */
-      --accent-color: #ff1493;  /* Rosa brillante */
-      --secondary-color: #333333; /* Gris oscuro */
-      --background-color: #f5f5f5; /* Blanco/crema */
-      --text-color: #222;
-      --surface: #ffffff;
-      --radius-lg: 16px;
-      --radius-md: 12px;
-      --shadow: 0 8px 24px rgba(0,0,0,.12);
-      --container: 1200px;
-      --divider-fg: rgba(255,105,180,.18);
-      --divider-bg: rgba(0,0,0,.06);
-      --transition: .25s ease;
-    }
-
+	:root{
+	  /* Paleta FUGA DE FLAMENCOS (imagen) */
+	  --primary-color: #FF3DCD;      /* Magenta neón (brand) */
+	  --accent-color:  #B100A4;      /* Magenta oscuro (hover/bordes) */
+	  --secondary-color: #E8E3F3;    /* Texto sobre fondos oscuros */
+	  --background-color: #0A0712;   /* Negro violeta de base */
+	  --surface: #151026;            /* Paneles/tarjetas sobre fondo */
+	  --text-color: #E8E3F3;         /* Alias si lo necesitas */
+	  --radius-lg:16px;
+	  --radius-md:12px;
+	  --shadow: 0 8px 24px rgba(255,61,205,.12);
+	  --container:1200px;
+	
+	  /* Divisores/acentos con brillo */
+	  --divider-fg: rgba(255,61,205,.45);
+	  --divider-bg: rgba(255,61,205,.10);
+	
+	  --transition:.25s ease;
+	}
+	
     /* Reset básico y estilos generales */
     *, *::before, *::after { box-sizing: border-box; }
     html { scroll-behavior: smooth; }
@@ -131,7 +135,7 @@
     .wide-cta p { font-family: 'Playfair Display', serif; font-size: 1.5rem; margin: 0 0 24px; }
 
     /* Footer */
-    .footer { background: var(--secondary-color); color: #fff; padding: 50px 0 20px; }
+    .footer { background:#151026; color:#fff; padding: 50px 0 20px; }
     .footer-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 50px; text-align: left; }
     .footer-section h3 { margin: 0 0 16px; color: var(--primary-color); }
     .footer-section a { text-decoration: none; color: #fff; transition: color var(--transition); }
