--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         "logo": "https://i.imgur.com/G5g2B7B.png",
         "image": "https://i.imgur.com/2sA2Q5m.jpg",
         "address": {"@type": "PostalAddress","addressLocality": "Seseña","addressCountry": "ES"},
-        "contactPoint": {"@type": "ContactPoint","contactType": "Atención comercial","telephone": "+34 667 236 5000","email": "info@fugadeflamencos.com","areaServed": "ES","availableLanguage": ["es"]},
+        "contactPoint": {"@type": "ContactPoint","contactType": "Atención comercial","telephone": "+34 667 236 500","email": "info@fugadeflamencos.com","areaServed": "ES","availableLanguage": ["es"]},
         "sameAs": ["https://www.facebook.com/","https://www.instagram.com/","https://www.youtube.com/"]
       },
       {"@type": "WebSite","@id": "https://fugadeflamencos.com/#website","url": "https://fugadeflamencos.com/","name": "Fuga de Flamencos"}
@@ -228,8 +228,8 @@
   <main id="main">
     <section class="hero" style="background-image:url('assets/images/fdf-hero.webp')" role="region" aria-labelledby="h1-hero">
       <div class="hero-content" data-animate>
-        <h1 id="h1-hero" class="hero-title">Fuga de Flamencos</h1>
-        <p class="hero-subtitle">Productora, representación y escuela de flamenco en Seseña 💃🎶</p>
+        <h1 id="h1-hero" class="hero-title">FUGA DE FLAMENCOS</h1>
+        <p class="hero-subtitle">PRODUCCIÓN, REPRESENTACIÓN Y ESCUELA DE FLAMENCO EN SESEÑA 💃🎶</p>
         <a href="#contacto" class="btn btn-primary">Únete a nuestra familia flamenca</a>
       </div>
       <hr class="divider" aria-hidden="true" />
@@ -360,7 +360,7 @@
       <div class="footer-grid">
         <section class="footer-section" aria-labelledby="contacto-heading">
           <h3 id="contacto-heading">Contacto</h3>
-          <p>Teléfono: <a href="tel:+346672365000">+34 667 236 5000</a></p>
+          <p>Teléfono: <a href="tel:+346672365000">+34 667 236 500</a></p>
           <p>Email: <a href="mailto:info@fugadeflamencos.com">info@fugadeflamencos.com</a></p>
           <p>Ubicación: Seseña, Toledo. España</p>
         </section>
@@ -375,6 +375,7 @@
       </div>
       <div class="footer-bottom">
         <p>Fuga de Flamencos &copy; <span id="year"></span>. Todos los derechos reservados.</p>
+        <small>Sitio web creado por <a href="https://instagram.com/jdelafuente88" target="_blank" rel="noopener">@jdelafuente88</a></small>
       </div>
     </div>
   </footer>
