Modify lesson section

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     <section id="formacion" class="section-dark" role="region" aria-labelledby="h2-formacion">
       <div class="container split">
         <div class="section-image-box media" data-animate>
-          <img src="https://i.imgur.com/Z4w7n4N.jpg" alt="Clase de flamenco" loading="lazy" decoding="async" width="800" height="540">
+          <img src="assets/images/fdf-action-4.webp" alt="Clase de flamenco" loading="lazy" decoding="async" width="800" height="540">
         </div>
         <div class="section-text-box" data-animate>
           <h2 id="h2-formacion" class="section-title-dark">Formación y Clases de Flamenco</h2>
