--- a/reservas/index.html
+++ b/reservas/index.html
@@ -132,7 +132,7 @@
       <a href="index.html" class="logo">
         FUGA<span style="color:var(--primary)">DE</span>FLAMENCOS
       </a>
-      <a href="index.html" style="text-transform: uppercase; font-size: 0.9rem; font-weight: 600;">
+      <a href="../index.html" style="text-transform: uppercase; font-size: 0.9rem; font-weight: 600;">
         &larr; Volver
       </a>
     </div>
