FIX internal links

--- a/index.html
+++ b/index.html
@@ -472,14 +472,13 @@
         <i class="fas fa-bars"></i>
       </button>
       
-      <nav>
+	  <nav>
         <ul class="nav-list" id="navList">
-          <li><a href="#escuela" class="nav-link">Escuela</a></li>
-          <li><a href="#estudio" class="nav-link">Estudio</a></li>
-          <li><a href="#espacios" class="nav-link">Espacios</a></li>
-          <li><a href="#eventos" class="nav-link">Eventos</a></li>
-		  <li><a href="./reservas/" class="nav-link" style="color:var(--primary)">Reservar Online</a></li>
-          <li><a href="#contacto" class="nav-link">Contacto</a></li>
+          <li><a href="./index.html#escuela" class="nav-link">Escuela</a></li>
+          <li><a href="./index.html#estudio" class="nav-link">Estudio</a></li>
+          <li><a href="./index.html#espacios" class="nav-link">Espacios</a></li>
+          <li><a href="./reservas/" class="nav-link" style="color:var(--primary)">Reservar Online</a></li>
+          <li><a href="./index.html#contacto" class="nav-link">Contacto</a></li>
         </ul>
       </nav>
     </div>
@@ -662,10 +661,10 @@
         <p style="font-size: 0.8rem; color: #666; margin-bottom: 10px;">
           &copy; <span id="year"></span> Fuga de Flamencos®. Todos los derechos reservados.
         </p>
-        <div class="footer-links">
-          <a href="/legal/aviso-legal/">Aviso Legal</a>
-          <a href="/legal/privacidad/">Política de Privacidad</a>
-          <a href="/legal/cookies/">Política de Cookies</a>
+		<div class="footer-links">
+          <a href="./aviso-legal/">Aviso Legal</a>
+          <a href="./privacidad/">Política de Privacidad</a>
+          <a href="./cookies/">Política de Cookies</a>
         </div>
       </div>
     </div>
@@ -674,7 +673,7 @@
   <div id="cookieBanner">
     <div class="cookie-text">
       <strong>Privacidad.</strong> Utilizamos cookies propias y de terceros para gestionar las reservas y analizar el tráfico.
-      <a href="/legal/cookies/" style="color:var(--primary); text-decoration:underline;">Leer más</a>
+      <a href="./cookies/" style="color:var(--primary); text-decoration:underline;">Leer más</a>
     </div>
     <div class="cookie-buttons">
       <button id="btnDeny" class="btn-cookie btn-deny">Denegar</button>
